--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "author": "Robin",
   "license": "ISC",
   "devDependencies": {
+    "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
+    "mocha": "^9.2.2",
     "nodemon": "^2.0.15"
   },
   "dependencies": {
