--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,5 +49,5 @@ jobs:
             - uses: akhileshns/heroku-deploy@v3.12.12
               with:
                   heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-                  heroku_app_name: shareameal-prog4
-                  heroku_email: ${{secrets.HEROKU_USER_EMAIL}}
+                  heroku_app_name: share-meal-2184746
+                  heroku_email: ${{secrets.HEROKU_EMAIL}}
